Centering of rows

--- a/linkbook/authentication/templates/authentication/signup.html
+++ b/linkbook/authentication/templates/authentication/signup.html
@@ -8,7 +8,7 @@
     <div class="container">
     <link rel="stylesheet" type="text/css" href="/static/materialize/css/override_buttons.css">
     <link rel="stylesheet" type="text/css" href="http://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css">
-        <div class="row">
+        <div class="row center">
             <div class="col s1 m3 l3"> </div>
             <div class="col s10 m6 l6 card hoverable" style="margin: 1px; margin-top: 5px">
                 <br>
@@ -36,14 +36,14 @@
             <div class="col s1 m3 l3"></div>
 
         </div>
-    <div class="row center-align" style="margin: 1px">
+    <div class="row center center-align" style="margin: 1px">
         <h5 style="margin-left: 0%">Or continue with : </h5>
     </div>
-    <div class="row" style="margin: 1px">
+    <div class="row center" style="margin: 1px">
         <div class="col s1 m1 l1"></div>
         <div class="col s10 m10 l10">
 
-            <div class="row">
+            <div class="row center">
         <div class="col s12 m3 l3">
                  <div>
                         <a href="{% url 'social:begin' 'github' %}"><button class="btn black lighten-3 white-text btn-block "><span class="fa fa-github" style="text-transform: lowercase"> |  GitHub</span></button></a>
