--- a/linkbook/core/templates/core/index.html
+++ b/linkbook/core/templates/core/index.html
@@ -57,15 +57,15 @@
 
 {% for ITEM in all_links %}
 <div class="container" style="padding: 0px; margin: 0px" >
-    <div class="row" style="padding: 0px; margin: 0px">
+    <div class="row center" style="padding: 0px; margin: 0px">
         <div class="col s12 m1 l3"></div>
         <div class="col s12 m10 l6 link_card" id="{{ ITEM.link.id }}">
             <ul class="collection hoverable "  style="border: 1px solid #607d8b" id="list">
                 <li class="collection-item avatar">
-                    <div class="row"  style="padding: 0px; margin: 0px">
+                    <div class="row center"  style="padding: 0px; margin: 0px">
                         <!-- user avatar -->
                         <img class="responsive-img circle"  height = "40px" width="40px" src="{{ITEM.link.user.profile.pic}}" />
-                        <div class="row">
+                        <div class="row center">
                             <div class="col s12 m4 l4">
                                 <span class="title blue-grey-text ">{{ ITEM.link.user }}<br/>
                         <sup>{{ ITEM.time }}</sup></span>
@@ -74,7 +74,7 @@
                            <div class="col s12 m8 l8 right right-align hide-on-med-and-down" id="icons_extra" style="margin: 0px; padding: 0px">
 
 
-                   <div class="row right right-align" style="margin: 0px; padding: 0px">
+                   <div class="row center right right-align" style="margin: 0px; padding: 0px">
                       <div class="col s12 m12 l12 right right-align" style="margin: 0px; padding: 0px">
 
                           <a class="btn-floating dropdown-button btn-small waves-effect waves-light blue show_url_button" href="#" title="Show URL" data-activates="dropdownRemoverX{{ITEM.link.id}}" id="{{ ITEM.link.id }}"><i class="material-icons">remove_red_eye</i></a>
@@ -85,7 +85,7 @@
                   </div>
                             <div class="col s12 m8 l8 left left-align hide-on-large-only" id="icons_extra" style="margin: 0px; padding: 0px">
 
-                   <div class="row left left-align" style="margin: 0px; padding: 0px">
+                   <div class="row center left left-align" style="margin: 0px; padding: 0px">
                       <div class="col s12 m12 l12 left left-align" style="margin: 0px; padding: 0px">
 
                           <a class="btn-floating dropdown-button btn-small waves-effect waves-light blue show_url_button" href="#" title="Show URL" data-activates="dropdownRemove{{ITEM.link.id}}" id="{{ ITEM.link.id }}"><i class="material-icons">remove_red_eye</i></a>
@@ -96,11 +96,11 @@
                   </div>
                         </div>
                     </div>
-                    <div class="row" style="margin: 0px;">
+                    <div class="row center" style="margin: 0px;">
                         <div class="col s12 m12 l12">
                             <i class="material-icons circle blue-grey">description</i>
                             <div>
-                                <div class="row" style="margin-bottom: 0px">
+                                <div class="row center" style="margin-bottom: 0px">
                                     <div class="col s12 m12 l7">
                                         <a href = "{{ITEM.link.url}}" target="_blank" class="title">
                                             <h5>{{ITEM.link.title | linebreaksbr}}</h5>
@@ -179,7 +179,7 @@
 
                 {% if request.user.is_authenticated %}
                 <li class="collection-item avatar" style="padding: 0px; margin: 0px">
-                    <div class="row" style="padding: 0px; margin: 0px">
+                    <div class="row center" style="padding: 0px; margin: 0px">
                         <div class="col s6 m4 l4" >
                             <span> <sup id="upvotes_count{{ ITEM.link.id }}">{{ ITEM.upvotes }}</sup><sup> upvote(s)</sup></span>
                             <button class="btn green upvote upvote_upper_button waves-effect waves-light {{ITEM.upvote_button}} center" id="upvote_button{{ ITEM.link.id }}" link_id = "{{ ITEM.link.id }}"> <i class="material-icons" style="color: white; background-color: transparent">thumb_up</i> </button>
@@ -214,7 +214,7 @@
                             {{ ITEM.comment_form.as_p }}
                         </div>
                     </form>
-                    <div class="row" style="padding: 0px; margin: 0px">
+                    <div class="row center" style="padding: 0px; margin: 0px">
                         <div class="col s12 m12 l4">
                             <button class="btn blue waves-effect waves-light" id="commentSubmitButton">Comment</button>
                         </div>
@@ -297,7 +297,7 @@
 <!-- Copy to Clipboard Drop down -->
 <ul id="dropdownRemove{{ITEM.link.id}}" class="dropdown-content" style="max-width: 200px" >
     <li>
-        <div class="row" style="max-width: 100%; ;overflow-x: scroll; padding: 1%; margin: 0px;">
+        <div class="row center" style="max-width: 100%; ;overflow-x: scroll; padding: 1%; margin: 0px;">
             <span>
             <a  id="link_url{{ ITEM.link.id }}" href="{{ ITEM.link.url }}" target="_blank" style="display: inline-block;" > {{ ITEM.link.url }}</a>
             </span>
@@ -310,7 +310,7 @@
 
     <ul id="dropdownRemoverX{{ITEM.link.id}}" class="dropdown-content" style="max-width: 200px" >
     <li>
-        <div class="row" style="max-width: 100%; ;overflow-x: scroll; padding: 1%; margin: 0px;">
+        <div class="row center" style="max-width: 100%; ;overflow-x: scroll; padding: 1%; margin: 0px;">
             <span>
             <a  id="link_url{{ ITEM.link.id }}" href="{{ ITEM.link.url }}" target="_blank" style="display: inline-block;" > {{ ITEM.link.url }}</a>
             </span>
@@ -357,7 +357,7 @@
     <div class="modal" id="modalDelete{{ITEM.link.id}}">
         <div class="modal-content">
             <div class="container">
-                <div class="row">
+                <div class="row center">
                     <h4 class="center-align red-text flow-text">Are you sure?</h4>
                     <div  class="col s12 m12 l12" style="margin: 2px">
                         <button  class="btn red white-text modalD deleteCompletely " id="{{ ITEM.link.id }}">Delete this link completely from all of your books</button>
@@ -376,7 +376,7 @@
 <!-- Edit comment Modal -->
     <div class="modal" id="modalEditComment">
         <div class="modal-content">
-            <div class="row">
+            <div class="row center">
                 <h5 class="center-align blue-text">Edit/Delete Comment</h5>
                 <div class="col s1 m1 l1"></div>
                 <div class="col s10 m10 l10">
@@ -384,7 +384,7 @@
                         <textarea id="modalEditCommentTextarea">
 
                         </textarea>
-                        <div class="row">
+                        <div class="row center">
                             <div class="col 12 m12 l6">
                                 <button class="btn" id="editCommentButton">Save</button>
                             </div>
@@ -431,7 +431,7 @@
                 {
                 	str += '<li class="divider"></li>'
                 		+ '<li class="collection-item avatar commentsListItem">'
-                        + '<div class="row">'
+                        + '<div class="row center">'
                 		+ '<a href="/' + comments[i]['user'] + '/"><img src=' + comments[i]['pic']
                 		+ ' class="responsive-img circle" title=' + comments[i]['user'] + '></a>'
                 		+ '<div class = "col s12 m12 l12 " comments_inside_div commentsListItem">'
