--- a/linkbook/authentication/templates/authentication/login.html
+++ b/linkbook/authentication/templates/authentication/login.html
@@ -7,7 +7,7 @@
 
 {% block body %}
     <div class="container">
-        <div class="row">
+        <div class="row center">
             <br><br>
             <div class="col s1 m3 l3"></div>
             <div class="col s10 m6 l6 card hoverable">
