--- a/linkbook/core/templates/core/edit_profile.html
+++ b/linkbook/core/templates/core/edit_profile.html
@@ -11,7 +11,7 @@
 
     <div class="container">
         <br><br>
-        <div class="row">
+        <div class="row center">
             <div class="col s1 m3 l3"> </div>
             <div class="col s10 m6 l6 card hoverable">
                 <br>
@@ -44,7 +44,7 @@
 
         <div class="modal" id="modalCropper">
             <div class="modal-content">
-                <div class="row">
+                <div class="row center">
                     <div class="col s12 m3 l4">
                         Adjust your new profile pic in the cropper and the save your new profile pic.
                     </div>
