--- a/linkbook/links/templates/links/tags.html
+++ b/linkbook/links/templates/links/tags.html
@@ -7,11 +7,11 @@
 {% block body %}
     <div class = "container">
 
-    <div class="row">
+    <div class="row center">
         <h3 class="center blue-grey-text">Links with tag '{{tagname}}'</h3>
     </div>
     {% for link in tag%}
-        <div class="row">
+        <div class="row center">
             <div class="col s1 l4 m4"></div>
             <div class="col s10 m4 l4">
                 <div class="card horizontal hoverable white-text blue-grey lighten-1">
